<resources>
    <string name="app_name">帮你忙房源</string>
    <!--登录页面-->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登        录</string>
    <string name="enter_phonenumber">填写您的手机号</string>
    <string name="enter_pwd">请输入密码</string>
    <string name="register">注       册</string>
    <string name="forget_pwd">忘记密码？</string>
    <!--注册页面-->
    <string name="enter_phone">输入手机号</string>
    <string name="enter_password">输入密码</string>
    <string name="sure_password">确认密码</string>
    <string name="enter_codes">输入验证码</string>
    <string name="get_codes">获取验证码</string>
    <!--重设密码-->
    <string name="new_password">填写您的手机号</string>
    <string name="next">下一步</string>
    <string name="sure_set_pwd">确认重设</string>
    <string name="new_pwd">新密码</string>
    <!--我的页面所用-->
    <string name="grzl">个人资料</string>
    <string name="wddd">我的订单</string>
    <string name="dzgl">地址管理</string>
    <string name="yjfk">意见反馈</string>
    <string name="gywm">关于我们</string>
    <string name="price">充值续费</string>
    <string name="push">推送设置</string>
    <string name="loginout">退出</string>
    <!--个人资料页面-->
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="phonenumber">手机号码</string>
    <string name="changepwd">修改密码</string>
    <!--头像修改dialog-->
    <string name="upload_pic">选择上传方式</string>
    <string name="select_local_img">从相册选择</string>
    <string name="txt_true_author">实名认证</string>
    <string name="Photograph">拍照</string>
    <string name="picture_cutting">图片裁剪</string>
    <string name="images">图片</string>
    <string name="all_images">所有图片</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>

    <!-- 搜索界面-->
    <string name="fangyuanbianhao">房源编号：</string>
    <string name="donghao">栋号：</string>
    <string name="quyu">&#160;&#160;&#8201;区&#160;&#160;&#8201;域：</string>
    <string name="housetype">房屋房型：</string>
    <string name="mianji">&#160;&#160;&#8201;面&#160;&#160;&#8201;积：</string>
    <string name="zongjia">&#160;&#160;&#8201;总&#160;&#160;&#8201;价：</string>
    <string name="danjia">&#160;&#160;&#8201;单&#160;&#160;&#8201;价：</string>
    <string name="louceng">&#160;&#160;&#8201;楼&#160;&#160;&#8201;层：</string>
    <!-- xListView-->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <!-- 支付页面-->
    <string name="pay_ali">支付宝支付</string>
    <string name="pay_ali_intro">推荐已安装支付宝客户端的用户使用</string>
    <string name="pay_wechat">微信支付</string>
    <string name="pay_wechat_intro">推荐已安装微信端的用户使用</string>
    <!-- 关于我们-->
    <string name="about_us">客服电话：17756037452（微信同号）</string>
    <string name="str_last">请联系QQ:493556212 电话：17756037452(微信，支付宝同号）</string>
</resources>
