<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        style="@style/text_19_black"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="bottom|center_horizontal"
        android:textColor="@color/light_gray"
        android:text="@string/upload_pic" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <TextView
        android:id="@+id/Photograph"
        style="@style/first_page_text_other"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/Photograph" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <TextView
        android:id="@+id/selectImage_from_local"
        style="@style/first_page_text_other"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/select_local_img" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />
    <TextView
        android:id="@+id/txt_true_author"
        style="@style/first_page_text_other"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:visibility="gone"
        android:gravity="center"
        android:text="@string/txt_true_author" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <TextView
        android:id="@+id/dimiss_dialoag"
        style="@style/first_page_text_other"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:textColor="@color/orange"
        android:gravity="center"
        android:text="@string/cancel" />

</LinearLayout>