<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/white">
    <include layout="@layout/title" android:id="@+id/title"
        ></include>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@id/title"
        android:layout_marginTop="@dimen/thirty"
        android:hint="@string/new_pwd"
        android:paddingTop="@dimen/ten"
        android:paddingBottom="@dimen/ten"
        android:paddingLeft="@dimen/ten"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:textSize="@dimen/sp13"
        android:background="@drawable/shape_et_login"
        android:id="@+id/edt_pwd1" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@id/edt_pwd1"
        android:layout_marginTop="@dimen/thirty"
        android:hint="@string/enter_pwd"
        android:paddingTop="@dimen/ten"
        android:paddingBottom="@dimen/ten"
        android:paddingLeft="@dimen/ten"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:textSize="@dimen/sp13"
        android:background="@drawable/shape_et_login"
        android:id="@+id/edt_pwd2" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/thirty"
        android:layout_marginLeft="@dimen/thirty"
        android:layout_marginRight="@dimen/thirty"
        android:paddingTop="@dimen/ten"
        android:paddingBottom="@dimen/ten"
        android:layout_below="@id/edt_pwd2"
        android:textColor="@color/white"
        android:background="@drawable/btn_login"
        android:textSize="@dimen/dp18"
        android:text="@string/sure_set_pwd"
        android:id="@+id/btn_setpwd"/>
</RelativeLayout>
