<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/title"
        layout="@layout/title"></include>


    <EditText
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginTop="@dimen/dp30"
        android:background="@drawable/shape_et_login"
        android:layout_below="@id/title"
        android:hint="真实姓名【注：用于实名认证，必须为真实姓名】"
        android:paddingBottom="@dimen/ten"
        android:paddingLeft="@dimen/ten"
        android:paddingTop="@dimen/dp10"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/sp13" />
    <EditText
        android:id="@+id/txt_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginTop="@dimen/ten"
        android:background="@drawable/shape_et_login"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/ten"
        android:paddingLeft="@dimen/ten"
        android:paddingTop="@dimen/ten"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/sp13" />
    <EditText
        android:id="@+id/txt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_pwd"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginTop="@dimen/dp10"
        android:background="@drawable/edittext_shape"
        android:hint="@string/enter_phone"
        android:inputType="number"
        android:paddingBottom="@dimen/ten"
        android:paddingLeft="@dimen/ten"
        android:paddingTop="@dimen/ten"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/sp13" />
    <LinearLayout
        android:id="@+id/lineone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:orientation="horizontal"
        android:layout_below="@id/txt_phone"
        >

        <EditText
            android:id="@+id/txt_keycode"
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten"
            android:layout_marginRight="@dimen/ten"
            android:background="@drawable/shape_et_login"
            android:hint="短信验证码"
            android:paddingLeft="@dimen/ten"
            android:paddingTop="@dimen/ten"
            android:paddingBottom="@dimen/ten"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/sp13" />

        <Button
            android:id="@+id/btn_keycode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:background="@color/bg_for_head"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16"
            android:layout_marginRight="@dimen/ten"
            android:text="获取验证码" />
    </LinearLayout>
    <CheckBox
        android:id="@+id/chk_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lineone"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="15dp"
        android:checked="true"
        android:text="" />

    <TextView
        android:id="@+id/tv_protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/chk_agree"
        android:layout_alignParentStart="true"
        android:layout_marginStart="49dp"
        android:layout_marginBottom="6dp"
        android:text="我已阅读,并同意《用户服务协议》" />
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lineone"
        android:layout_marginLeft="@dimen/thirty"
        android:layout_marginTop="56dp"
        android:layout_marginRight="@dimen/thirty"
        android:background="@drawable/btn_login"
        android:paddingTop="@dimen/ten"
        android:paddingBottom="@dimen/ten"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/dp18" />

</RelativeLayout>
