<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/title"
        layout="@layout/title"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/sp15"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp10"
            android:paddingRight="@dimen/dp10">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdo_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="60/季度" />

                <RadioButton
                    android:id="@+id/rdo_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="100/半年" />

                <RadioButton
                    android:id="@+id/rdo_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="190/年" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/background_all" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp10"
            android:paddingRight="@dimen/dp10">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="选择支付方式" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/background_all" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/rdo_alipay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:layout_marginRight="9dp"
                android:checked="true"
                android:text="" />

            <RelativeLayout
                android:id="@+id/alipay"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="-40dp"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/img_alipay"
                    android:layout_width="@dimen/dp40"
                    android:layout_height="@dimen/dp40"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp10"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_zidiv_alipay" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="6dp"
                    android:layout_toRightOf="@id/img_alipay"
                    android:text="@string/pay_ali"
                    android:textColor="@color/txt"
                    android:textSize="@dimen/sp13" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="8dp"
                    android:layout_toRightOf="@id/img_alipay"
                    android:text="@string/pay_ali_intro"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/sp11" />


            </RelativeLayout>


            <View
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:background="@color/background_all" />

            <RadioButton
                android:id="@+id/rdo_wechatpay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:layout_marginRight="9dp"
                android:text="" />

            <RelativeLayout
                android:id="@+id/my_info"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="-40dp"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/img_wechat"
                    android:layout_width="@dimen/dp40"
                    android:layout_height="@dimen/dp40"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp10"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_zidiv_wechat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="6dp"
                    android:layout_toRightOf="@id/img_wechat"
                    android:text="@string/pay_wechat"
                    android:textColor="@color/txt"
                    android:textSize="@dimen/sp13" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="8dp"
                    android:layout_toRightOf="@id/img_wechat"
                    android:text="@string/pay_wechat_intro"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/sp11" />


            </RelativeLayout>


        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/background_all" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_advert"
            android:layout_marginTop="@dimen/dp20"
            android:layout_width="330dp"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/icon_zidiv_bar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:background="@color/light_gray"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_totalprice"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:gravity="center_vertical"
            android:textSize="@dimen/sp16"
            android:padding="@dimen/dp10"
            android:text="总计:60元" />
        <Button
            android:id="@+id/btn_pay"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@color/orange"
            android:layout_gravity="right"
            android:layout_marginTop="-50dp"
            android:text="立即支付"
            android:textColor="@color/white"
            android:focusable="false" />
    </LinearLayout>
</LinearLayout>

